Fixed extra padding

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -12,10 +12,10 @@
 
 html, body {
   height: 100%;
-  margin: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   display: flex;
   flex-direction: column;
-  margin: 0;
   font-family: Helvetica, sans-serif;
   background-color: var(--gray-6);
 }
@@ -69,7 +69,7 @@ footer .text-class {
 .footer-section {
   background-color: #000000;
   color: var(--white-1);
-  padding: 1rem 35rem 0rem 35em;
+  padding: 0rem 35rem 5rem 35em;
   width: auto; /* Set the width to auto */
   max-width: 100vw; /* Ensure the footer doesn't exceed the viewport width */
   margin: 0 auto; /* Center the footer horizontally */
@@ -163,6 +163,9 @@ footer .copyright {
 }
 
 @media (max-width: 1500px) {
+  .footer-section {
+    padding: 0rem 35rem 0rem 35em;
+  }
   .footer-flex-row {
     flex-direction: column;
     align-items: flex-start;
